# sentineltrace

./: .env.example  .gitignore  Makefile  README.md
docs/: audit-byte-grammar.md
generator/: pyproject.toml
generator/synthfix/: __init__.py  engine.py  fix.py  instruments.py  labels.py  scenarios.py  traders.py
generator/tests/: test_engine.py  test_front_running.py  test_marking_the_close.py  test_momentum_ignition.py  test_scenarios.py
ml/: dataset.py  pyproject.toml  scorer.py
ml/tests/: test_scorer.py
pipeline/conf/: schemas.py
pipeline/shared/audit/: audit_chain.py
pipeline/shared/models/: alert_contract.py
pipeline/tests/: conftest.py  test_bronze.py  test_gold.py  test_silver.py
pipeline/transforms/: bronze.py  gold.py  silver.py
scala-detectors/: build.sbt
scala-detectors/src/main/scala/com/sentineltrace/: Alert.scala  AlertId.scala  GoldFeatures.scala  Hash.scala  Severity.scala
scala-detectors/src/main/scala/com/sentineltrace/detectors/: Emit.scala  FrontRunning.scala  MarkingTheClose.scala  Momentum.scala  Spoofing.scala  WashTrade.scala
scala-detectors/src/test/scala/com/sentineltrace/: DetectorIsolationSpec.scala  SpoofingSpec.scala  ToolchainSmokeSpec.scala  TransformWithStateSpec.scala  WashTradeSpec.scala
scripts/spikes/blake3_conformance/: conformance.mjs  conformance.py  conformance.scala
scripts/spikes/blake3_conformance/.scala-build/: ide-envs.json  ide-inputs.json  ide-launcher-options.json
scripts/spikes/blake3_conformance/.scala-build/blake3_conformance_6351b3cf96-206acc40a9/classes/main/: conformance$package.tasty  (+1 more)
